# adp-pipelines

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: build-image.yml  ci.yml
dags/sharepoint_connection_check/: config.toml  sharepoint_connection_check.py
docs/: testing.md
docs/providers/sharepoint/: service-principal-setup.md
plugins/providers/sharepoint/hooks/: sharepoint.py
plugins/utils/: dag_config.py
provider_registration/: pyproject.toml
provider_registration/adp_provider_reg/: get_provider_info.py
tests/: conftest.py  test_image.py  test_runtime_imports.py
tests/dags/: test_config_convention.py  test_sharepoint_connection_check.py
tests/provider_registration/: test_get_provider_info.py
tests/providers/sharepoint/hooks/: test_sharepoint.py  test_sharepoint_integration.py
tests/utils/: test_dag_config.py
