[project]
name = "adp-pipelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==3.2.2",
    "office365-rest-python-client==2.6.2",
    "pyyaml==6.0.3",
]

[dependency-groups]
dev = [
    "faker>=40.31.0",
    "pandas>=2.3.3",
    "pytest==9.1.1",
    "pytest-mock==3.15.1",
]

[tool.pytest.ini_options]
pythonpath = ["plugins", "dags"]
testpaths = ["tests"]

[tool.pyright]
extraPaths = ["plugins", "dags"]

