[project]
name = "adp-pipelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==3.2.2",
    "apache-airflow-providers-apache-spark==6.0.2",
    "apache-airflow-providers-celery==3.20.0",
    "apache-airflow-providers-cncf-kubernetes==10.17.1",
    "apache-airflow-providers-fab==3.6.4",
    "apache-airflow-providers-microsoft-azure==13.3.0",
    "asyncpg==0.31.0",
    "azure-identity==1.25.3",
    "azure-keyvault-secrets==4.11.0",
    # Transitive via airflow/msal, but SharePointHook imports it directly to validate
    # the certificate private key. Floor, not a pin: airflow resolves the real version.
    "cryptography>=44.0.0",
    "office365-rest-python-client==2.6.2",
    # SharePointHook.read_excel. openpyxl is the xlsx engine, and the only one that can
    # see a formula (data_only=False) -- calamine and polars both render an uncached
    # formula as "", so neither can explain an empty column. pandas ships in the airflow
    # base image but is absent from our resolved set, so it is one base-image bump from
    # vanishing; pyspark[sql] declares it too. Floors, not pins: airflow resolves these.
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "psycopg2-binary==2.9.12",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "faker>=40.31.0",
    "mypy>=2.3.0",
    "pandas-stubs>=2.2",
    "pytest==9.1.1",
    "pytest-mock==3.15.1",
    "python-dotenv==1.2.2",
    "ruff>=0.15.21",
    "types-openpyxl>=3.1",
]

[tool.pytest.ini_options]
pythonpath = ["plugins", "dags", "provider_registration"]
testpaths = ["tests"]
addopts = "-m 'not integration and not image'"
markers = [
    "integration: hits real external services; requires credentials (e.g. via .env). Run with `pytest -m integration`.",
    "image: runs against the built container image; requires Docker and IMAGE_REF. Run with `pytest -m image`.",
]

[tool.ruff]
# `.claude/worktrees/*` holds checkouts of other branches. Ruff only skips gitignored
# paths, and .claude is untracked rather than ignored, so without this a bare
# `ruff format .` reformats files on branches you aren't working on.
extend-exclude = [".claude"]

[tool.mypy]
python_version = "3.12"
files = ["plugins", "dags", "provider_registration"]
# DAG modules import plugins as top-level packages (`from utils.dag_config import ...`)
# because Airflow puts plugins/ on sys.path at runtime. Mirrors pytest's `pythonpath`
# and pyright's `extraPaths` — all three must agree, or imports resolve differently in
# the editor, the test run, and CI.
mypy_path = ["plugins", "dags", "provider_registration"]
# DAG folders carry no __init__.py (Airflow loads each DAG file standalone), so mypy
# has to treat them as namespace packages rooted at mypy_path.
namespace_packages = true
explicit_package_bases = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true

# office365-rest-python-client ships no stubs and no py.typed marker. Scoped to that
# library rather than a global ignore_missing_imports, which would also mask a
# genuinely missing dependency anywhere else.
[[tool.mypy.overrides]]
module = ["office365.*"]
ignore_missing_imports = true

[tool.pyright]
extraPaths = ["plugins", "dags", "provider_registration"]

